@@ -2,6 +2,7 @@ import static java.awt.RenderingHints.*
 import java.awt.image.BufferedImage 
 import javax.imageio.ImageIO
 import java.text.Normalizer
+import org.yaml.snakeyaml.Yaml
 
 configure()
 
@@ -121,14 +122,14 @@ project(":ios") {
     }
 }
 
-task cleanAssets << {
+task cleanAssets() << {
     deldir file("android/assets")
     deldir file("shared/build/lua")
 }
 
 clean.dependsOn cleanAssets
 
-task init << {
+task init() << {
     file("../assets").mkdir()
 	
     def origpname = initName.replace('"', "")
@@ -149,16 +150,15 @@ task init << {
         .toLowerCase()
 
     def text =
-        "---\n" +
-        "  name: ${origpname}\n" +
-        "  package: com.${uname}.${pname}\n"
-        "  version: 1.0"
+        "name: ${origpname}\n" +
+        "package: com.${uname}.${pname}\n" +
+        "version: 1.0"
 
-    new File("../config.yml").text = text
+    new File("../project.yml").text = text
     copy { from "res"; into "../assets"; include "main.moon" }
 }
 
-task rocks << {
+task rocks() << {
     if (!cfg.rocks) return
 
     for (rock in cfg.rocks) {
@@ -166,24 +166,33 @@ task rocks << {
     }
 }
 
-task update(dependsOn: [':rocks', ':updateAssets']) {
-    def src = "../"
+task update(dependsOn: [':rocks', ':updateAssets']) << {
+    def src = ".."
     def res = "res"
     def out = "android/assets/non"
     def files = [ "bg.png", "font.ttf" ]
     
     for(fl in files) {
-        if (file("${src}/${fl}").exists()) {
-            copy { from src; into out; include "${fl}" }
+        if (file("$src/$fl").exists()) {
+            copy { from src; into out; include "$fl" }
         } else {
-            copy { from res; into out; include "${fl}" }
+            copy { from res; into out; include "$fl" }
         }
     }
-    
-    copy { from src; into out; include "config.yml" }
+
+    def scfg = new Yaml().load(file("$src/project.yml").text)
+
+    if (scfg.sign) {
+        scfg.sign = "private"
+    }
+
+    def cfgf = file("$out/project.yml")
+    if (cfgf.exists()) cfgf.delete()
+    cfgf.createNewFile()
+    cfgf.text = new Yaml().dump(scfg)
 }
 
-task updateDesktop << {
+task updateDesktop() << {
     def out = "android/assets/non"
     copyAndReplace("platforms/desktop/DesktopLauncher.java", "desktop/src/$packageDir/desktop/DesktopLauncher.java")
     copyAndResizeIcon("${out}/icon-16.png", 16)
@@ -203,7 +212,7 @@ task updateAndroid(dependsOn: 'android:copyNatives') << {
     copyAndResizeIcon("android/ic_launcher-web.png", 512)
 }
 
-task updateIOS << {
+task updateIOS() << {
     copyAndReplace("platforms/ios/robovm.properties", "ios/robovm.properties")
     copyAndReplace("platforms/ios/IOSLauncher.java", "ios/src/$packageDir/ios/IOSLauncher.java")
     copyAndResizeIcon("ios/data/Icon.png", 57)
@@ -212,7 +221,7 @@ task updateIOS << {
     copyAndResizeIcon("ios/data/Icon-72@2x.png", 144)
 }
 
-task updateAssets(type: Sync) {
+task updateAssets(type: Sync) << {
     from "../assets"
     into "android/assets"
     exclude "**/*.moon"
@@ -222,16 +231,15 @@ task updateAssets(type: Sync) {
 }
 
 def configure() {
-    def f = file("../config.yml")
+    def f = file("../project.yml")
     
     if (f.exists()) {
-        ext.cfg = new org.yaml.snakeyaml.Yaml().load(f.text)
+        ext.cfg = new Yaml().load(f.text)
     } else {
-        ext.cfg = new org.yaml.snakeyaml.Yaml().load(
-            "---\n" +
-            "  name: non\n" +
-            "  package: non\n" +
-            "  version: 1.0"
+        ext.cfg = new Yaml().load(
+            "name: non\n" +
+            "package: non\n" +
+            "version: 1.0"
         )
     }
 }
