@@ -29,6 +29,8 @@
 - changed "init" cli command to "new"
 - added checks for cli task if project is not present or already exists
 - now console output is sexy and colorful
+- renamed "config.yml" to "project.yml"
+- renamed non.config to non.project
 
 [0.6.4]
 - fixed documentation for methods that returns multiple values
